testsuite/tests/typecheck/should_fail/tcfail084.stderr

tcfail084.hs:10:9: error: [GHC-53822]
    Constructor ‘F’ does not have field ‘y’
